<resources>
    <string name="app_name">영화사전</string>
    <string name="Moive_name">데드풀2</string>
    <string name="Moive_Summery_Head">마침내, 그 분이 오신다! 이번엔 혼자가 아니다!</string>

    <string name="Moive_Summery_Body">암치료를 위한 비밀 실험에 참여한 후,
 강력한 힐링팩터 능력을 지닌 슈퍼히어로 데드풀로 거듭난 웨이드 윌슨(라이언 레놀즈),
 운명의 여자친구 바네사(모레나 바카린)와 행복한 미래를 꿈꾸지만 다시 나락으로 떨어지고,
 밑바닥까지 내려간 데드풀은 더 나은 사람이 되기로 결심한다.

 어느 날, 미래에서 시간 여행이 가능한 용병 케이블(조슈 브롤린)이 찾아 오면서
 새로운 사건이 발생하고 데드풀은 생각지도 못한 기상천외 패밀리를 결성하게 되는데...</string>

    <string name="Moive_OpenDay">2018.05.16 개봉</string>
    <string name="Moive_Runtime">117분</string>


    <string name="Moive_Director">감독</string>
    <string name="Moive_Director_Name">데이빗 레이츠</string>
    <string name="Moive_Actor">배우</string>
    <string name="Moive_Actor_Names">라이언 레이놀즈, 조슈 브롤린, 모레나 바카린</string>

    <string name="Movie_OneLine_Evaluation">한줄평</string>
    <string name="Movie_Write">작성하기</string>
    <string name="Movie_AllView">모두보기</string>
    <string name="Movie_Get">예매하기</string>

</resources>
