<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_margin="10dp"

                android:src="@drawable/deadpool"></ImageView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Moive_name"
                        android:textSize="30dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_margin="7dp"
                        android:src="@drawable/num9"></ImageView>
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/Moive_OpenDay"
                    android:textSize="15dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/Moive_Runtime"
                    android:textSize="15dp"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/heartbutton"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/heart"
                        android:onClick="onClick_HeartBtn"></Button>

                    <TextView
                        android:id="@+id/hearttext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:text="0"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"

            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="예매율"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5위 1.8%"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"

                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="인기도"
                    android:textAlignment="center"
                    android:textSize="15dp"

                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1"

                    >
                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:isIndicator="false"
                        android:numStars="5"
                        android:rating="3"
                        android:stepSize="0.5"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5.0"

                        android:textSize="12dp"
                        android:textStyle="bold"
                        />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="누적관객수"
                    android:textAlignment="center"
                    android:textSize="15dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="839,399명"
                    android:textAlignment="center"
                    android:textSize="12dp"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#D8D8D8"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textStyle="bold"
                android:text="@string/Moive_Summery_Head"
                android:textColor="@android:color/background_dark"/>

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/background_dark"
                android:textSize="12dp"
                android:text="@string/Moive_Summery_Body"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#D8D8D8"
            android:orientation="horizontal"></LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@android:color/background_dark"
                android:text="감독/배우"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Moive_Director"
                    android:textColor="@android:color/background_dark"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Moive_Director_Name"
                    android:textColor="@android:color/background_dark"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Moive_Actor"
                    android:textColor="@android:color/background_dark"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/Moive_Actor_Names"
                    android:textColor="@android:color/background_dark"
                    android:textSize="15dp" />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#D8D8D8"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@android:color/background_dark"
                    android:text="@string/Movie_OneLine_Evaluation"
                    android:layout_weight="1"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="2">

                    <Button
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/write"
                        android:onClick="onClickedWrite" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Movie_Write"
                        android:textColor="@android:color/holo_blue_bright"
                        android:textSize="13dp"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>

            <Button
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/boader"
                android:onClick="onClickedAllView"
                android:text="@string/Movie_AllView"
                android:textColor="@android:color/holo_green_dark" />

        </LinearLayout> <!--한줄평 Layout-->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#D8D8D8"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/facebook"
                android:onClick="onClickedFacebook"
                android:textColor="@android:color/holo_green_dark" />

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:background="@drawable/kakao"
                android:onClick="onClickedKakao"
                android:textColor="@android:color/holo_green_dark" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="130dp"
                android:background="@android:color/holo_red_dark"
                android:onClick="onClickedGive"
                android:text="@string/Movie_Get"
                android:textColor="@android:color/background_light" />

        </LinearLayout>

    </LinearLayout> <!-- 최상단 Layout-->
</ScrollView>
